--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Valikkun.github.io/Table",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "bootstrap": "^4.1.2",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
@@ -18,6 +20,8 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
